projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-asymmetric-paths/aws_configs/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0516d87817474b2f2",
     "RouteTableId": "rtb-00c2998c46ae0d786",
     "SubnetId": "subnet-0b7957a706be58c47"
    }
   ],
   "OwnerId": "554773406868",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-00c2998c46ae0d786",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "TransitGatewayId": "tgw-0a33c739a4f8978a8"
    },
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-0f2c5f8ac8f5d475c",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "fish-igw"
    }
   ],
   "VpcId": "vpc-0de868624d5f787db"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-0a76f4a31475ed53f",
     "RouteTableId": "rtb-039f2fae46ca9c3ed"
    }
   ],
   "OwnerId": "554773406868",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-039f2fae46ca9c3ed",
   "Routes": [
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-0de868624d5f787db"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0189bbb87c610873f",
     "RouteTableId": "rtb-0e3fb8ed9edf52160",
     "SubnetId": "subnet-0156c57e17070dd17"
    }
   ],
   "OwnerId": "554773406868",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0e3fb8ed9edf52160",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "TransitGatewayId": "tgw-01e19888e3ba041ac"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-063b0d31ebd4e4c5e",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat-igw"
    }
   ],
   "VpcId": "vpc-0c7ecdaddf451b56d"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-0fe7799c57b0749fe",
     "RouteTableId": "rtb-096346593fa1fd466"
    }
   ],
   "OwnerId": "554773406868",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-096346593fa1fd466",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-0c7ecdaddf451b56d"
  }
 ]
}
