projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-asymmetric-paths/aws_configs/Vpcs.json
{
 "Vpcs": [
  {
   "CidrBlock": "10.2.0.0/16",
   "CidrBlockAssociationSet": [
    {
     "AssociationId": "vpc-cidr-assoc-066884124c9c896af",
     "CidrBlock": "10.2.0.0/16",
     "CidrBlockState": {
      "State": "associated"
     }
    }
   ],
   "DhcpOptionsId": "dopt-ac879bd7",
   "InstanceTenancy": "default",
   "IsDefault": false,
   "OwnerId": "554773406868",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "fish"
    }
   ],
   "VpcId": "vpc-0de868624d5f787db"
  },
  {
   "CidrBlock": "10.1.0.0/16",
   "CidrBlockAssociationSet": [
    {
     "AssociationId": "vpc-cidr-assoc-0347ae77598ad4941",
     "CidrBlock": "10.1.0.0/16",
     "CidrBlockState": {
      "State": "associated"
     }
    }
   ],
   "DhcpOptionsId": "dopt-ac879bd7",
   "InstanceTenancy": "default",
   "IsDefault": false,
   "OwnerId": "554773406868",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat"
    }
   ],
   "VpcId": "vpc-0c7ecdaddf451b56d"
  }
 ]
}
